  - non-modal FLARM radar (with InfoBoxes and menu)
  - show FAI triangle sectors in task manager
  - can drag modal dialogs
  - short click opens InfoBox dialog
  - support keyboard input on desktop computer
  - improved angle input (e.g. wind direction, sector radials)
  - faster map initialisation during startup
  - reduce audio vario latency
  - better bold fonts on Linux
* infoboxes
  - added thermal assistant infobox
  - inverse colors for wind arrow infobox and flarm gauge (#2337)
* track friends via internet connection (SkyLines live tracking)
* SkyLines tracking enabled on Windows CE
* Documentation
  - started a French translation of the manual
  - included an almost complete German translation of the manual

Version 6.4.6 - 2013/01/23
* devices
  - Leonardo: fixed vario parser for the $c sentence
  - C-Probe: fixed temperature offset bug
  - GTAltimeter: fixed vario parser
  - SerialPort: fixed lockup/hang problem when closing for some CE devices (#2515)
* user interface
  - sort airspaces properly in the airspace list dialog (#2528)
* infoboxes
  - fixes broken wind arrow display in some situations (#2295)
  - fix font scaling on screen rotation change (Android/Linux OpenGL)
* data files
  - fixed arc airspace approximation threshold handling (#2360)
* configuration
  - save waypoint label display configuration changed from menu (#2548)

Version 6.4.5 - 2012/12/14
* calculations
  - fix rounding error in convex boundary calculation (#2477)
* devices
  - Vega: fix MacCready setting feedback loop (#1218, #2490)
* user interface
  - faster gesture drawing
  - fix crash in InfoBox page setup (#2122)
  - allow scrolling the check list on Altair (#1289)
* map
  - fix crash in terrain renderer with broken map file (#2478)
* data files
  - added "LAK-12" polar

Version 6.4.4 - 2012/11/15
* devices
  - CAI302: longer timeout for "CLEAR LOG"
* user interface
  - fix font preview in configuration dialog
  - fix the Escape key on Altair