@@ -44,6 +44,7 @@ Version 6.5 - not yet released
   - faster map initialisation during startup
   - reduce audio vario latency
   - better bold fonts on Linux
+  - add page option to show cross section below map
 * infoboxes
   - added thermal assistant infobox
   - inverse colors for wind arrow infobox and flarm gauge (#2337)
